--- a/templates/default/motd.erb
+++ b/templates/default/motd.erb
@@ -7,7 +7,9 @@ Chef Server: <%= Chef::Config[:chef_server_url] %>
 Environment: <%= node.chef_environment %>
 <% end -%>
 Last Run: <%= ::Time.now %>
+<% if node['roles'] != '' -%>
 Roles: <%= node['roles'].join(', ') %>
+<% end -%>
 <% if node['tags'] && !node['tags'].empty? -%>
 Tags: <%= node['tags'].join(', ') -%>
 <% end -%>
