--- a/templates/default/motd.erb
+++ b/templates/default/motd.erb
@@ -1,3 +1,12 @@
+<%= "\033[34m" -%>
+   __  _______  _________
+  /  |/  / __ \/_  __/ _ \
+ / /|_/ / /_/ / / / / // /
+/_/  /_/\____/ /_/ /____/
+
+https://github.com/linyows/motd-cookbook
+<%= "\033[0m" -%>
+
 Chef-Client - <%= node.name %>
 Hostname: <%= node['cloud'] ? node['cloud']['public_hostname'] : node['fqdn'] %>
 <% if !Chef::Config[:solo] -%>
@@ -7,9 +16,11 @@ Chef Server: <%= Chef::Config[:chef_server_url] %>
 Environment: <%= node.chef_environment %>
 <% end -%>
 Last Run: <%= ::Time.now %>
-<% if node['roles'] != '' -%>
+<% unless node['roles'].empty? -%>
 Roles: <%= node['roles'].join(', ') %>
 <% end -%>
 <% if node['tags'] && !node['tags'].empty? -%>
 Tags: <%= node['tags'].join(', ') -%>
 <% end -%>
+
+(c) MOTD
